<resources>
    <string name="app_name">Buttons V2.5</string>
    <string name="asr_detected_text">ASR Detected text ..</string>
    <string name="status">Status</string>
    <string name="stop_listening">Stop Listening..</string>
    <string name="start_listening">Start Listening..</string>
    <string name="sample_text">Dummy activity. The service is already started.</string>
    <string name="welcome_text">Aneeda voice assistant is ready. You can start interacting with Aneeda by saying the hello aneeda.</string>
    <string name="login_details">Login status</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="configure_bluetooth">Configure Bluetooth</string>
    <string name="configure_wifi">Configure WiFi</string>
    <string name="logout">Logout</string>
    <string name="launch_activities">Launch Activities</string>
    <string name="not_logged_in">Not logged in. Please log in</string>
    <string name="logged_in">Logged in as user %s</string>
    <string name="radio_production">Production</string>
    <string name="radio_staging">Staging</string>
    <string name="radio_dev">Dev</string>
    <string name="enable_asr_completion_tone">Enable ASR Completion Tone</string>
    <string name="signup_text">Do not have account ? signup</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup">SIGNUP</string>
    <string name="nick_name">Enter nick name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email id</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="show_password">Show password</string>
    <string name="agree">I have read and agree to the i.am+ terms and conditions</string>
    <string name="lang_pref">Language preference</string>
    <string name="err_msg_name">Name cannot be empty</string>
    <string name="signing_in">Signing you up with us</string>
    <string name="signup_success">Signup successful, activation link has been sent to %s</string>
    <string name="signup_failed_network">Signup failed, please check your network</string>
    <string name="signup_failed_user">Signup failed, User already exist</string>
    <string name="signup_failed">Signup failed</string>
    <string name="err_msg_password_length">Password length is too short</string>
    <string name="err_msg_email">Enter a valid email address</string>
    <string name="err_msg_password">Password cannot be empty</string>
    <string name="err_msg_locationname">Location name cannot be empty</string>
    <string name="err_msg_conf_password">Passwords does not match</string>
    <string name="pls_accept_terms">Please accept terms</string>
    <string name="pls_wait">Please wait</string>
    <string name="exit">Exit</string>
    <string name="csr_control">Connect CSR Board</string>
    <string name="update">Update</string>
    <string name="gaia_conection_status">GAIA Status:</string>
    <string name="disconnected">Buttons disconnected</string>
    <string name="retry_to_connect">Connect</string>
    <string name="enable_voice_assistant">Enable voice assistant</string>
    <string name="enable_sensory">Enable Sensory</string>
    <string name="radio_qa">Qa</string>
    <string name="radio_demo">Demo</string>
    <string name="select_fota_channel_text">Choose Fota Channel</string>
    <string name="nlu">NLU channel</string>
    <string name="fota">FOTA channel</string>
    <string name="toggle_to_fota">Tap below to change from NLU to <b>FOTA</b> channel mode</string>
    <string name="toggle_to_nlu">Tap below to change from FOTA to <b>NLU</b> channel mode</string>
    <string name="update_alert_battery_low">Please connect it to a charger.</string>
    <string name="update_alert_battery_low_title">Battery low on Omega buttons</string>
    <string name="enable_auto_fota">Enable auto update</string>
    <string name="activity_microphone_test">Microphone test</string>
    <string name="recoord">Record</string>
    <string name="stop">Stop</string>
    <string name="fail">Fail</string>
    <string name="pass">Pass</string>
    <string name="play">Play</string>
    <string name="stopplay">Stop playing</string>
    <string name="export">Export</string>
    <string name="pause">Pause</string>

</resources>
